<resources>
    <string name="app_name">Login-Eventos</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOG IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Registro</string>
    <string name="prompt_password_repeat">Password again</string>
</resources>